gccida/g0/noce_try_cmove
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove/src/ifcvt.c:1435:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)*( _WORD *)if_info->cond, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove/src/ifcvt.c:1435:12: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
( rtx_code)*( _WORD *)if_info->cond, 
~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove/src/obj/ifcvt.o] Error 1
